# gitignore

./: .gitignore  CHANGELOG.md  README.md  build_binaries.sh  config.go  config.yaml  config_test.go  gitignore  gitignore.go  go.mod  go.sum  mainline  options.go  pyproject.toml  sample_config.yaml  setup.py
cmd/: default_config.yaml  gitignore.go  main.go
docs/plans/: fromGo.md
gitignore/: __init__.py  __main__.py  gitignore_file.py
src/gitignore/: __init__.py  __main__.py  app.py  cli.py  config.py  config.yaml
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_main.py
